Replace logo image source in index.html

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   </style>
 </head>
 <body>
-  <img src="logo_nfx.png" alt="NFx" class="logo">
+  <img src="logo.png" alt="NFx" class="logo">
   <h1>Adicionar Cartão NFx</h1>
   <p>Toque no botão abaixo para adicionar seu cartão à Carteira (Apple Wallet).</p>
   <button id="addBtn">Adicionar à Carteira</button>
